--- a/LOTAWeb/Areas/Admin/Views/Course/Details.cshtml
+++ b/LOTAWeb/Areas/Admin/Views/Course/Details.cshtml
@@ -119,7 +119,7 @@
                     @if (Model.LearningOutcomes != null && Model.LearningOutcomes.Any())
                     {
                         <div class="row">
-                            @foreach (var lo in Model.LearningOutcomes)
+                            @foreach (var lo in Model.LearningOutcomes.OrderBy(lo => lo.LOName))
                             {
                                 <div class="col-12 mb-3">
                                     <div class="border rounded p-3">
