--- a/LOTAWeb/Areas/Admin/Views/LOScore/Score.cshtml
+++ b/LOTAWeb/Areas/Admin/Views/LOScore/Score.cshtml
@@ -198,7 +198,7 @@
                                                                        min="0" 
                                                                        max="@alo.Score" 
                                                                        step="0.01"
-                                                                       style="width: 80px;"
+                                                                       style="width: 110px; height: 40px; font-size: 15px;"
                                                                        onchange="validateScore(this)">
                                                             </div>
                                                         </td>
